# caffe_demo

./: CMakeLists.txt  README.md  readme.md
common/: CMakeLists.txt  cuda_function.cu  cuda_function.h
include/: psd.h  semantic_division.h  vgg16.h
src/: CMakeLists.txt  post.cpp  psd.cpp  semantic_division.cpp  semantic_division_test.cpp  vgg16.cpp
test/: CMakeLists.txt  parsing_test.cpp  psd_test.cpp  semantic_division_test.cpp  vgg16_test.cpp
third_lib/caffe_include/: include
third_lib/caffe_lib/: lib
tools/: CMakeLists.txt  read_mnist_data_to_img.cpp
